    (it is now also used for directive options).

* docutils/transforms/frontmatter.py

  - Update `DocInfo` to work with corrected element categories.

* docutils/transforms/misc.py:

  - Fix for `misc.Transitions`: report an error if a <transition> element
    follows a <meta> or <decoration> element as this is invalid
    according to ``docutils.dtd``.

* docutils/transforms/references.py

  - Make `AnonymousHyperlinks` transform idempotent.

* docutils/transforms/universal.py

  - `Messages` also handles "loose" system messages generated by the parser.

* docutils/utils/__init__.py

  - Removed `Reporter.set_conditions()`.
    Set attributes via configuration settings or directly.

* docutils/utils/error_reporting.py

  - Removed. Obsolete in Python 3.

* docutils/writers/_html_base.py

  - Make MathML the default math_output_.

* docutils/writers/html4css1/__init__.py

  - Keep default math_output_ value "HTML math.css".

* docutils/writers/manpage.py

  - Remove code for unused emdash bullets.
  - Feature-request #105 more informative document comments.
    docutils version in header
  - Stop converting text to full capitals (bug #481).

* docutils/writers/docutils-xml.py

  - Do not increase indentation of follow-up lines inside inline elements.
    when formatting with `indents`_.

* tools/rst2odt_prepstyles.py

  - Removed. Use `docutils.writers.odf_odt.prepstyles`.


Release 0.21.2 (2024-04-23)
===========================

* Declare support for languages Georgian and Catalan (Valencian).

* docs/ref/docutils.dtd

  - Remove declaration of element <info>.
  - Remove <decoration> from content declaration of <section> elements.

* Fix test failures.


Release 0.21.1 (2024-04-10)
===========================

* Add missing files in Docutils 0.21 source distribution (sdist).

Release 0.21 (2024-04-09)
=========================

* General

  - Drop support for Python 3.7 and 3.8.
  - Updated build system to use Flit_ (patch #186 by Adam Turner).